tests/samples/negative/types/enum_adt_duplicate_auto_discriminant.ax
module enum_adt_duplicate_auto_discriminant;

enum Bad {
    a = 1,
    b,
    duplicate = 2,
}

fn main() -> i32 {
    return 0;
}
